@@ -68,6 +68,8 @@ namespace Tinke
             this.linkfamfamfam = new System.Windows.Forms.LinkLabel();
             this.lblfamfamfam = new System.Windows.Forms.Label();
             this.linkTrad = new System.Windows.Forms.LinkLabel();
+            this.label7 = new System.Windows.Forms.Label();
+            this.label8 = new System.Windows.Forms.Label();
             ((System.ComponentModel.ISupportInitialize)(this.pictureImage)).BeginInit();
             this.SuspendLayout();
             // 
@@ -249,11 +251,34 @@ namespace Tinke
             this.linkTrad.Text = "S0C";
             this.linkTrad.LinkClicked += new System.Windows.Forms.LinkLabelLinkClickedEventHandler(this.linkTrad_LinkClicked);
             // 
+            // label7
+            // 
+            this.label7.AutoSize = true;
+            this.label7.Font = new System.Drawing.Font("Microsoft Sans Serif", 10F, System.Drawing.FontStyle.Underline, System.Drawing.GraphicsUnit.Point, ((byte)(0)));
+            this.label7.ForeColor = System.Drawing.Color.Black;
+            this.label7.Location = new System.Drawing.Point(169, 291);
+            this.label7.Name = "label7";
+            this.label7.Size = new System.Drawing.Size(104, 17);
+            this.label7.TabIndex = 18;
+            this.label7.Text = "Special thanks:";
+            // 
+            // label8
+            // 
+            this.label8.AutoSize = true;
+            this.label8.Font = new System.Drawing.Font("Consolas", 10F, System.Drawing.FontStyle.Bold, System.Drawing.GraphicsUnit.Point, ((byte)(0)));
+            this.label8.Location = new System.Drawing.Point(88, 314);
+            this.label8.Name = "label8";
+            this.label8.Size = new System.Drawing.Size(264, 17);
+            this.label8.TabIndex = 19;
+            this.label8.Text = "rafael1193   go11um   Odnetnin I";
+            // 
             // Autores
             // 
             this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
             this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
-            this.ClientSize = new System.Drawing.Size(435, 293);
+            this.ClientSize = new System.Drawing.Size(435, 340);
+            this.Controls.Add(this.label8);
+            this.Controls.Add(this.label7);
             this.Controls.Add(this.linkTrad);
             this.Controls.Add(this.lblfamfamfam);
             this.Controls.Add(this.linkfamfamfam);
@@ -307,6 +332,8 @@ namespace Tinke
         private System.Windows.Forms.LinkLabel linkfamfamfam;
         private System.Windows.Forms.Label lblfamfamfam;
         private System.Windows.Forms.LinkLabel linkTrad;
+        private System.Windows.Forms.Label label7;
+        private System.Windows.Forms.Label label8;
 
     }
 }
