@@ -6,6 +6,7 @@
 * Add support for SWAV sound files
 * Add support for SWAR sound files
 * Add Zoom feature
-* Add possibility to change the bgd color with transparency checked.
+* Add possibility to change the bgd color with transparency checked
+* UNICODE encoding support for text files
 
 
